tests/interp/bad/bad-arc.small.metric.center-format.ngc
;Radius to end of arc differs from radius to start: start=(X0.0000,Y0.0000) center=(X24.9857,Y0.0000) end=(X50.0000,Y0.0000) r1=24.9857 r2=25.0143 abs_err=0.02857 rel_err=0.1142%

g21
f1
g0x0y0z0
g2 x50.00 y0 i[25.00 - [0.0101 * sqrt[2]]]
